fixes nav: ul display none when hamX is collapsed

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ body{
   background-color: rgb(237, 237, 237);
   position: relative;
   z-index:-99;
+  height: 100vh;
 }
 
 
@@ -171,11 +172,11 @@ header{
 .nav-links{
   position: relative;
   z-index: 95;
-  opacity: 0;
   text-align: center;
   width: 50vw;
   font-family: 'Ubuntu', sans-serif;
   text-decoration: none;
+  display: none;
 }
 
 li.nav-list{
@@ -211,7 +212,8 @@ a.nav-item:hover{
   z-index:-95;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  min-height: 100%;
 }
 
 video {
@@ -264,13 +266,16 @@ div.pause, .play, .dark-light-mode{
 .home-details{
   position: relative;
   top: 0;
-  font-size: 2.4rem;
+  font-size: 2vw;
+  /* font-size: 2.4rem; */
   padding: 1% 8%;
   max-width: 100vw;
   line-height: 1.6;
 }
 
-
+.last-detail{
+  flex-grow:1;
+}
 
 /* footer */
 .f-footer{
